# csvcomparer

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: CI.yaml
csvcomparer/: __init__.py  __main__.py  csvcomparer.py
docs/: requirements.txt
docs/source/: conf.py  contributing.rst  csvcompare.rst  csvcompare_diffs.rst  examples.rst  index.rst  installation.rst  roadmap.rst
tests/: test_csvcompare.py
tests/files/: menu_l.csv  menu_r.csv
